<resources>
    <string name="app_name">Mood Tracker</string>
    <string name="month_1">Jan</string>
    <string name="month_2">Feb</string>
    <string name="month_3">Mar</string>
    <string name="month_4">Apr</string>
    <string name="month_5">May</string>
    <string name="month_6">Jun</string>
    <string name="month_7">Jul</string>
    <string name="month_8">Aug</string>
    <string name="month_9">Sep</string>
    <string name="month_10">Oct</string>
    <string name="month_11">Nov</string>
    <string name="month_12">Dec</string>
    <string name="cannot_choose_future">Cannot record bean in the feature.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tus</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="see_all_time_line">See all time line</string>
    <string name="monday_full">Monday</string>
    <string name="tuesday_full">Tuesday</string>
    <string name="wednesday_full">Wednesday</string>
    <string name="thursday_full">Thursday</string>
    <string name="friday_full">Friday</string>
    <string name="saturday_full">Saturday</string>
    <string name="sunday_full">Sunday</string>
    <string name="status_1">Angry</string>
    <string name="status_2">Disappointed</string>
    <string name="status_3">Anxious</string>
    <string name="status_4">Sad</string>
    <string name="status_5">Normal</string>
    <string name="status_6">Happy</string>
    <string name="status_7">Embarrassed</string>
    <string name="status_8">Amazed</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="which_day_is_this_record_for">Which day is this record for?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sleep">Sleep</string>
    <string name="pick_time_sleep_start">Pick time to start sleep</string>
    <string name="pick_time_sleep_end">Pick time to weak</string>
    <string name="today_photo">Today\'s photo</string>
    <string name="select_up_to_3_photos">Select up to 3 photos</string>
    <string name="today_s_note">Today\'s note</string>
    <string name="add_note">Add note</string>
    <string name="done">Done</string>
    <string name="emotional_diary">Emotional Diary</string>
    <string name="record_a_feeling">Record Your Feelings</string>
    <string name="txt_every_day">Every Day</string>
    <string name="track_emotions">Track Emotions</string>
    <string name="with">With</string>
    <string name="charts">Charts</string>
    <string name="smothe_emotion">Soothe Emotions</string>
    <string name="music">Music</string>
    <string name="start">Start</string>
    <string name="add_edit_delete">Add/Edit/Delete</string>
    <string name="edit_order">Edit order</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="relax">Relax</string>
    <string name="trigger_sound">Trigger sound</string>
    <string name="ambient_sound">Ambient sound</string>
    <string name="time">Time</string>
    <string name="min">Min</string>
    <string name="cat_purr">Cat Purr</string>
    <string name="wood_fish_rs">Wood fish(RS)</string>
    <string name="wood_fish_tk">Wood fish(TK)</string>
    <string name="singing_bowl">Singing bowl</string>
    <string name="mute">Mute</string>
    <string name="city">City</string>
    <string name="universe">Universe</string>
    <string name="forest_wind">Forest wind</string>
    <string name="tide">Tide</string>
    <string name="forest">Forest</string>
    <string name="thunder_storm">Thunder Storm</string>
    <string name="swaying_leaf">Swaying leaf</string>
    <string name="raining">Raining</string>
    <string name="sound_cape">Soundcape</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="finish_sound">Congratulations on your complete</string>
    <string name="create_new_block">Create a new block</string>
    <string name="enter_block_name">Enter block name</string>
    <string name="enter_icon_name">Enter icon name</string>
    <string name="max_12_character">Max. 12 character</string>
    <string name="hidden_block">Hidden block</string>
    <string name="add">Add</string>
    <string name="select_an_icon">Select an icon</string>
    <string name="select_image">Select image</string>
    <string name="move_to_different_block">Move to a different block</string>
    <string name="hide_from_record">Hide from records</string>
    <string name="show_from_record">Show from records</string>
    <string name="remove_permanently">Remove Permanently</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_remove_this_icon">Do you want to delete this icon?</string>
    <string name="do_you_want_remove_this_record">Do you want to delete this record?</string>
    <string name="delete">Delete</string>
    <string name="string_exit">If you exit now, your edits won\'t be saved</string>
    <string name="text_continue">Continue</string>
    <string name="txt_confirm_remove_block">All icons of this block will be deleted. Are you sure you want to delete?</string>
    <string name="pick_to_show_timeline">Pick to show in timeline</string>
    <string name="text_edit_order">Rearrange order by  holding and dragging</string>
    <string name="txt_share">Share</string>
    <string name="photo_saved_successfully">Photo Saved Successfully</string>
    <string name="failed_to_save_photo">Failed to Save photo</string>
    <string name="dont_have_permission_write_file">Don\'t have permission write file</string>
    <string name="scale_basic">Basic</string>
    <string name="scale_1_1">1:1</string>
    <string name="scale_9_16">9:16</string>
    <string name="no_record_bean">No record bean 💤💤..</string>
    <string name="click_back">Click back again to exit.</string>
    <string name="pick_to_show_report">Pick to show report</string>
    <string name="mood_chart">Mood chart</string>
    <string name="number_of_moods">Number of moods</string>
    <string name="icon_ranking">Icon Ranking</string>
    <string name="all">All</string>
    <string name="sleep_analysis">Sleep Analysis</string>
    <string name="title_sleep_statistic">Statistics about your sleep records</string>
    <string name="must_select_start_and_end">You must set bed time and wake time.</string>
    <string name="emotional_relief">Emotional relief</string>
    <string name="emotional_calming_timer">Emotional Calming Timer</string>
    <string name="txt_monthly">Monthly</string>
    <string name="txt_all_time">All time</string>
    <string name="cannot_select_over_limit_image">Cannot select over limit image</string>
    <string name="scanning_image_from_gallery">Scanning photos in the gallery, the first time will take some time, please wait.</string>
    <string name="reset">Reset</string>
    <string name="premium_pass">Premium Pass</string>
    <string name="converts_to_free_version_after_this_period">Converts to free version after this period</string>
    <string name="txt_remain_daily">Daily Reminders</string>
    <string name="txt_sync_data">Sync data</string>
    <string name="txt_pin_lock">Passcode Lock</string>
    <string name="txt_finger_lock">Sign in with fingerprint</string>
    <string name="txt_screen_type">Themes</string>
    <string name="txt_dark_theme">Dark mode</string>
    <string name="txt_full_screen">Fullscreen mode</string>
    <string name="txt_share_app">Share App</string>
    <string name="txt_rate_app">Rate App</string>
    <string name="txt_send_report">Send Feedback</string>
    <string name="notification_content_1" translatable="false">Increase your productivity and reduce your anxiety with the help of Mood Tracker</string>
    <string name="notification_content_2" translatable="false">This is a small tree hole, listen to all your beauty and troubles.</string>
    <string name="notification_content_3" translatable="false">Everybody can use a mood boost! You can measure their impact on your mood in stats</string>
    <string name="notification_content_4" translatable="false">This is a small world that belongs only to you, where you can express your emotions with self-made facial expressions.</string>
    <string name="notification_content_5" translatable="false">Pick your mood and add activities you have been doing during the day</string>
    <string name="notification_content_6" translatable="false">The diary allows people to write diaries in a different way.</string>
    <string name="notification_content_7" translatable="false">notify7.</string>
    <string name="notification_content_8" translatable="false">notify8.</string>
    <string name="notification_content_9" translatable="false">notify9.</string>
    <string name="channel_name" translatable="false">Notifications bean</string>
    <string name="channel_desc" translatable="false">Notifications bean</string>
    <string name="set_passcode">Set passcode</string>
    <string name="enter_passcode">Enter your password</string>
    <string name="confirm_passcode">Confirm your PIN</string>
    <string name="set_passcode_success">Set passcode success</string>
    <string name="passcode_not_match">Confirm passcode not match.</string>
    <string name="txt_code_lock">Pasword</string>
    <string name="passcode_incorrect">Passcode incorrect</string>
    <string name="or_using_your_passcode">Or using your passcode to login app</string>
    <string name="title_finger_print_authenticator">Fingerprint authenticator</string>
    <string name="subtitle_finger_print_authenticator">Log in app using your biometric credential</string>
    <string name="txt_authen_finger_error">Authentication error</string>
    <string name="txt_authen_finger_success">Authentication succeeded!</string>
    <string name="txt_authen_finger_failed_v2">Authentication failed</string>
    <string name="txt_fingerprint_not_set">Device has not set fingerprint.</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_theme">Theme</string>
    <string name="txt_use_theme">Use theme</string>
    <string name="feed_back">Feedback for BeanDaily</string>
    <string name="email_contact">doanvv.dev@gmail.com</string>
    <string name="update_success">Changes have been updated</string>
    <string name="add_record_success">Record has been added</string>
    <string name="edit_record_success">Record has been edited</string>
    <string name="confirm_overwrite_bean">You\'ve already record on this day. Would you like to overwrite?</string>
    <string name="title_edit_block">Edit block</string>
    <string name="txt_back_screen">Back</string>
    <string name="loading_ads">Loading ads..</string>
    <string name="max_banner_id">3ce8c7c6d5ca3012</string>
    <string name="sync_data">Synchronize</string>
    <string name="txt_synchronizing">Synchronizing</string>
    <string name="txt_close">Close</string>
    <string name="txt_remind">Remind</string>
    <string name="txt_allow">Allow</string>
    <string name="txt_need_read_permission">To view all image of record, you need allow read storage permission, please allow.</string>
    <string name="txt_yearly">Yearly</string>
    <string name="txt_per_month">per month</string>
    <string name="txt_per_year">per year</string>
    <string name="txt_best_value">Best value</string>
    <string name="txt_go_premium">Go Premium</string>
    <string name="three_days_trial">3 days free trial</string>
    <string name="txt_description_trial">You can try 3 days for free, after 3 days payment will be charged automatically.\nSubscription auto-renew at the end of subscription period.\nYour account will be charged for renewal prior to the end of the current period.\nYou can manage and cancel your subscription in settings in the Google Play store.</string>
</resources>