<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/layout_round"
    android:orientation="vertical"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito_bold_700"
        android:text="@string/txt_remind"
        android:textColor="@color/text_color"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_semi_bold_600"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/txt_need_read_permission"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/read_storage" />

    <Button
        android:id="@+id/btnAllow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_sync_now"
        android:fontFamily="@font/nunito_bold_700"
        android:text="@string/txt_allow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>